# parrot-agent

./: .env  API_GAP_TASKS.md  CODE_REVIEW.md  COMPARISON_REPORT.md  Cargo.toml  FEATURE_GAP_TASKS.md  IMPLEMENTATION_SUMMARY.md  MODELS_REEXPORT_FIX_PLAN.md  PROGRESS.md  PROGRESS_ROUND10.md  PROGRESS_ROUND14.md  PROGRESS_ROUND15.md  PROGRESS_ROUND3.md  PROGRESS_ROUND4.md  PROGRESS_ROUND5.md  PROGRESS_ROUND7.md  PROGRESS_ROUND8.md  PROGRESS_UPDATE.md  README.md  REMAINING_ERRORS_ANALYSIS.md  ROUTE_COMPARISON.md  common_auth.md  cost_service_task.md  docker-compose.yml  task.md
architecture/: backend  frontend
crates/access/: Cargo.toml
crates/access/src/: filter.rs  issue_filter.rs  lib.rs  models.rs  service.rs
crates/api/: Cargo.toml
crates/api/src/: app_state.rs  errors.rs  extractors.rs  lib.rs  redaction.rs  schemas.rs
crates/api/src/middleware/: mod.rs  security_headers.rs
crates/api/src/routes/: access_control.rs  activity.rs  adapters.rs  agents.rs  approvals.rs  assets.rs  attachments.rs  auth.rs  board_chat.rs  built_in_agents.rs  cases.rs  cloud_upstreams.rs  comments.rs  companies.rs  config_revisions.rs  costs.rs  custom_image_setup.rs  documents.rs  environment_diagnostics.rs  environments.rs  execution_workspaces.rs  goals.rs  heartbeat_runs.rs  heartbeats.rs  instance_settings.rs  invite_resources.rs  invites.rs  issue_comments.rs  issue_diagnostics.rs  issue_documents.rs  issue_tree_control.rs  issues.rs  labels.rs  llms.rs  low_trust.rs  mod.rs  openclaw.rs  org.rs  org_chart.rs  pipelines.rs  (+16 more)
crates/api/src/schemas/: adapter_schemas.rs  heartbeat_schemas.rs  mod.rs  org_chart_schemas.rs
crates/api/src/validation/: agent_schemas.rs  issue_schemas.rs  mod.rs
crates/models/: Cargo.toml
crates/models/src/: activity_log.rs  adapter.rs  agent.rs  agent_api_key.rs  approval.rs  assets.rs  auth.rs  budget.rs  case.rs  company.rs  cost_event.rs  custom_image_setup.rs  environment.rs  environment_diagnostics.rs  error.rs  event_bus.rs  events.rs  execution_environment.rs  finance_event.rs  goal.rs  invite.rs  invite_resource.rs  issue.rs  issue_auxiliary.rs  issue_comment.rs  issue_document.rs  issue_tree_control.rs  label.rs  lib.rs  openclaw.rs  org_chart.rs  pipeline.rs  plugin.rs  project.rs  realtime_environment.rs  routine.rs  routine_annotation.rs  saga.rs  secret_provider.rs  secret_provider_config.rs  (+10 more)
crates/repositories/: Cargo.toml
crates/repositories/src/: activity_log_repository.rs  agent_api_key_repository.rs  agent_api_key_repository_ext.rs  agent_repository.rs  approval_repository.rs  asset_repository.rs  auth_repositories.rs  board_api_key_repository.rs  budget_repository.rs  case_issue_link_repository.rs  case_repository.rs  cli_auth_challenge_repository.rs  company_repository.rs  config_revision_repository.rs  cost_event_repository.rs  environment_repository.rs  execution_workspace_repository.rs  finance_event_repository.rs  goal_repository.rs  issue_auxiliary_repository.rs  issue_comment_repository.rs  issue_document_repository.rs  issue_repository.rs  issue_tree_control_repository.rs  label_repository.rs  lib.rs  pg_agent_repository.rs  pg_case_issue_link_repository.rs  pg_case_repository.rs  pg_config_revision_repository.rs  pg_issue_auxiliary_repository.rs  pg_issue_comment_repository.rs  pg_issue_document_repository.rs  pg_issue_repository.rs  pg_issue_tree_control_repository.rs  pg_skill_repository.rs  pipeline_case_repository.rs  pipeline_repository.rs  pipeline_stage_repository.rs  pipeline_transition_repository.rs  (+12 more)
crates/repositories/src/models/: auth.rs  auth_keys.rs  authorization.rs  invite.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/services/: Cargo.toml
crates/services/src/: access_service.rs  activity_log_service.rs  adapter_config_normalizer.rs  adapter_executor.rs  adapter_plugin.rs  adapter_registry.rs  agent_access_service.rs  agent_service.rs  approval_service.rs  asset_service.rs  attachment_service.rs  authorization_service.rs  authorization_service_complete.rs  built_in_agent_service.rs  built_in_agent_service_impl.rs  case_service.rs  cloud_upstream_service.rs  codex_local_isolation.rs  comment_service.rs  company_portability_service.rs  company_service.rs  config.rs  config_revision_service.rs  config_revision_service_impl.rs  consistency_checkers.rs  consistency_service.rs  cost_service.rs  custom_image_service.rs  custom_image_setup_service.rs  database_secret_service.rs  document_service.rs  environment_diagnostics_service.rs  environment_driver.rs  environment_runtime_service.rs  environment_service.rs  errors.rs  event_bus.rs  event_bus_service.rs  event_listeners.rs  file_resource_service.rs  (+66 more)
crates/services/src/access/: abac.rs  access_service.rs  mod.rs
crates/services/src/activity_log/: mod.rs  service.rs  types.rs
crates/services/src/adapters/: claude_local_adapter.rs  codex_local_adapter.rs  mod.rs  process_adapter.rs
crates/services/src/auth/: actor.rs  audit.rs  authorization_service.rs  board_access.rs  board_claim.rs  cli_auth.rs  decision.rs  decision_engine.rs  error.rs  invite.rs  jwt.rs  key_rotation.rs  membership.rs  middleware.rs  mod.rs  permission.rs  rate_limiter.rs
crates/services/src/consistency/: mod.rs
crates/services/src/environment_driver/: config.rs  local_driver.rs  mod.rs  registry.rs  sandbox_driver.rs  ssh_driver.rs
crates/services/src/event_bus/: mod.rs
crates/services/src/saga/: mod.rs
crates/services/src/sagas/: agent_hiring_saga.rs  issue_execution_saga.rs  routine_trigger_saga.rs
crates/services/tests/: auth_integration_tests.rs
docs/: route-conflict-analysis.md
migrations/: 001_create_companies.sql  002_create_projects.sql  003_create_activity_logs.sql  20260711000001_create_agents.sql  20260711000002_create_issues.sql  20260711000003_create_issue_tree_control.sql  20260711000004_create_cases.sql  20260711000005_create_agent_api_keys.sql  20260711000006_create_routines.sql  20260711000007_create_routine_triggers.sql  20260711000008_create_routine_revisions.sql  20260711000009_create_routine_runs.sql  (+43 more)
(+31 files in other folders)
