[package]
name = "parrot-agent"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Random
rand = "0.8"

# Cryptography
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "macros", "migrate"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
garde = { version = "0.18", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.12"

[dependencies]
