[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
services = { path = "../services" }
access = { path = "../access" }
repositories = { path = "../repositories" }
adapters = { path = "../adapters" }

axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
garde = { version = "0.18", features = ["derive", "serde"] }
chrono = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }
hex = "0.4"
