[package]
name = "repositories"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
