[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
repositories = { path = "../repositories" }
access = { path = "../access" }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tokio = { workspace = true }
aes-gcm = "0.10"
rand = "0.8"
regex = "1.10"
csv = "1.3"
axum = { workspace = true }
base64 = "0.22"
hmac = "0.12"
jwt = "0.16"
dashmap = "5.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
